funland/longhorn-system/longhorn/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "longhorn.batlab.io"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
